--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -28,9 +28,9 @@ jobs:
         # run: npm run lint
         # working-directory: ./library
 
-      - name: Build
-        run: npm run build
-        working-directory: ./library
+      # - name: Build
+        # run: npm run build
+        # working-directory: ./library
 
       - name: Tests && Coverage
         # Single command runs tests and generate the report
