--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -38,3 +38,11 @@ jobs:
         # Single command runs tests and generate the report
         run: npm run test:coverage
         working-directory: ./library
+
+      - name: Upload coverage report
+        if: ${{ !cancelled() }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: code-coverage-report
+          path: ./library/coverage/
+          retention-days: 30
