--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -24,6 +24,8 @@ jobs:
       - name: Build and push multi-arch image
         uses: docker/build-push-action@v4
         with:
-          context: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/library-app:latest
+          context: .
           platforms: linux/amd64, linux/arm64
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/library-app:latest
+
