--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-library/node_modules
+/node_modules
 /.pnp
 .pnp.*
 .yarn/*
@@ -11,11 +11,10 @@ library/node_modules
 !.yarn/versions
 
 # testing
-library/coverage
+/coverage
 
 # next.js
 /.next/
-library/.next
 /out/
 
 # production
@@ -49,5 +48,3 @@ next-env.d.ts
 !.vscode/settings.default.json
 .vscode/
 package-lock.json
-
-library/supabase
