--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -32,13 +32,5 @@ jobs:
       - name: Build multi-arch image and push to Docker Hub
         if: github.event_name == 'workflow_dispatch'  # only build and push if manual
         env:
-          NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
-          NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
-        run: |
-          docker buildx build \
-            --platform linux/amd64,linux/arm64 \
-            --build-arg NEXT_PUBLIC_SUPABASE_URL=$NEXT_PUBLIC_SUPABASE_URL \
-            --build-arg NEXT_PUBLIC_SUPABASE_ANON_KEY=$NEXT_PUBLIC_SUPABASE_ANON_KEY \
-            -t ${{ secrets.DOCKERHUB_USERNAME }}/library-app:latest \
-            --push \
-            .
+          DOCKER_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/library-app
+        run: npm run docker:build
