--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -32,5 +32,7 @@ jobs:
       - name: Build multi-arch image and push to Docker Hub
         if: github.event_name == 'workflow_dispatch'  # only build and push if manual
         env:
+          NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
+          NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
           DOCKER_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/library-app
         run: npm run docker:build
