--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -40,6 +40,8 @@ jobs:
           build-args: |
             NEXT_PUBLIC_SUPABASE_URL=${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
             NEXT_PUBLIC_SUPABASE_ANON_KEY=${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
+            # Fix for Webpack/QEMU Font Loader errors during multi-arch build:
+            NEXT_PRIVATE_NO_FONT_FALLBACK=true
 
         if: github.event_name == 'workflow_dispatch'  # only build and push if manual
         env:
