--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -43,6 +43,7 @@ jobs:
             # Fix for Webpack/QEMU Font Loader errors during multi-arch build:
             NEXT_PRIVATE_NO_FONT_FALLBACK=true
             NEXT_FONT_GOOGLE_MOCK=true # NEW: Mocks the Google Fonts fetch, preventing network errors
+            NEXT_FONT_GOOGLE_TIMEOUT=0 # NEW: Forces immediate timeout for network fetch attempts
 
         if: github.event_name == 'workflow_dispatch'  # only build and push if manual
         env:
