--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,10 @@
         "name": "next"
       }
     ],
+    "baseUrl": ".",
     "paths": {
       "@/*": ["./*"],
-      "@i18n": ["i18n/i18n.ts"]
+      "@i18n": ["app/i18n/i18n.ts"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
