--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
     "react-i18next": "^16.2.3",
+    "react-router-dom": "^7.9.5",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.5"
   },
