--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
     "test": "jest",
@@ -28,7 +28,7 @@
     "i18next": "^25.6.0",
     "i18next-resources-to-backend": "^1.2.1",
     "lucide-react": "^0.542.0",
-    "next": "15.5.2",
+    "next": "^16.0.1",
     "next-i18n-router": "^5.5.5",
     "nuqs": "^2.6.0",
     "react": "19.1.0",
