--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -19,7 +19,7 @@ jobs:
           node-version: 20
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install --retry 5 --fetch-timeout=60000
 
       - name: Run tests & generate coverage
         run: npm run test -- --coverage
