--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,6 +7,9 @@ sonar.organization=sep-r1
 # Project name
 sonar.projectName=SEP-R1
 
+# SonarQube server URL
+sonar.host.url=https://sonarcloud.io
+
 # Main source code folder
 sonar.sources=.
 
@@ -17,7 +20,7 @@ sonar.language=ts
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
 # Exclude node_modules and build output
-sonar.exclusions=node_modules/**, .next/**
+sonar.exclusions=**/node_modules/**, .next/**
 
 # Encoding
 sonar.sourceEncoding=UTF-8
