Update project keys

--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -28,8 +28,8 @@ jobs:
         uses: SonarSource/sonarqube-scan-action@v5.0.0
         with:
          args: >
-          -Dsonar.organization=vickneee-SEP-R1
-          -Dsonar.projectKey=sep-r1
+          -Dsonar.organization=sep-r1
+          -Dsonar.projectKey=vickneee_SEP-R1
           -Dsonar.sources=.
           -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
         env:
