Add sonar run script

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test:coverage": "jest --coverage",
     "test:coverage:open": "open-cli coverage/lcov-report/index.html",
     "docker:build": "bash docker-build.sh",
-    "docker:run": "docker run -p 3001:3001 --env-file .env.docker library-app"
+    "docker:run": "docker run -p 3001:3001 --env-file .env.docker library-app",
+    "sonar:run": "bash run_solar.sh"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
