Add excluded for documents

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -20,7 +20,7 @@ sonar.language=ts
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
 # Exclude node_modules and build output
-sonar.exclusions=**/node_modules/**, .next/**
+sonar.exclusions=**/node_modules/**, .next/**, documents/**
 
 # Encoding
 sonar.sourceEncoding=UTF-8
